--- a/_i18n/ar.yml
+++ b/_i18n/ar.yml
@@ -15,24 +15,31 @@ products:
     p_01:
         title: الحلول المالية
         url: https://a2f.910ths.sa/lang/ar
+        uat_url: https://uat-a2f.910ths.sa/lang/ar
     p_02:
         title: فرصة
         url: https://forsa.910ths.sa/
+        uat_url: https://uat-forsa.910ths.sa/
     p_03:
         title: منصة بحر
         url: https://bahr.910ths.sa/ar
+        uat_url: https://uat-bahr.910ths.sa/ar
     p_04:
         title: تُجّار
         url: https://tojjar.910ths.sa/
+        uat_url: https://uat-tojjar.910ths.sa/
     p_05:
         title: مسرعة الأعمال الناشئة
         url: https://a2a.910ths.sa/lang/ar
+        uat_url: https://uat-a2a.910ths.sa/lang/ar
     p_06:
         title: الوصول إلى المعلومات
         url: https://data.910ths.sa/ar
+        uat_url: https://uat-data.910ths.sa/ar
     p_07:
         title: أضف خدمتك
         url: https://ayos.910ths.sa/
+        uat_url: https://uat-ayos.910ths.sa/
 
 more: المزيد
 watch: شاهد الفيديو
