--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -15,24 +15,31 @@ products:
     p_01:
         title: Financial Solutions
         url: https://a2f.910ths.sa/lang/en
+        uat_url: https://uat-a2f.910ths.sa/lang/ar
     p_02:
         title: Forsa
         url: https://forsa.910ths.sa/
+        uat_url: https://uat-forsa.910ths.sa/
     p_03:
         title: Bahr
         url: https://bahr.910ths.sa/en
+        uat_url: https://uat-bahr.910ths.sa/ar
     p_04:
         title: Tojjar
         url: https://tojjar.910ths.sa/
+        uat_url: https://uat-tojjar.910ths.sa/
     p_05:
         title: Startup Accelerator
         url: https://a2a.910ths.sa/lang/en
+        uat_url: https://uat-a2a.910ths.sa/lang/ar
     p_06:
         title: Access to Information
         url: https://data.910ths.sa/en
+        uat_url: https://uat-data.910ths.sa/ar
     p_07:
         title: Add Your Own Service
         url: https://ayos.910ths.sa/
+        uat_url: https://uat-ayos.910ths.sa/
 
 more: More
 watch: Watch video
