--- a/_config.yml
+++ b/_config.yml
@@ -108,6 +108,8 @@ defaults:
     arabic_description: ''
     button: ''
     arabic_button: ''
+    button_url: ''
+    arabic_button_url: ''
     button_uat_url: ''
     arabic_button_uat_url: ''
     bg_video_asset: ''
