--- a/_config.yml
+++ b/_config.yml
@@ -299,6 +299,9 @@ esso:
 esso_api:
   base_url: https://esso-api.910ths.sa/api
   base_uat_url: https://uat-esso-api.910ths.sa/api
+zendesk_subdomain: 910ths
+hotjar_id: 511570
+hotjar_snippet_version: 5
 google_analytics_ua: 
 google_maps_js_api: AIzaSyCy6hRFVqBgV_JH5DLWLVXqaj4hAdvjdIw
 06_partners_section: Default
