--- a/_i18n/ar.yml
+++ b/_i18n/ar.yml
@@ -10,6 +10,10 @@ api:
     logout: خروج
     settings: الإعدادات
 
+zendesk:
+    label: الدعم
+    waiting: انتظار...
+
 products:
     title: الخدمات
     p_01:
