--- a/_config.yml
+++ b/_config.yml
@@ -312,8 +312,7 @@ imgix:
 description: Our innovated solutions develop projects, Support entrepreneurs, Facilitate
   access to investors, and enables you to expand your business. We are sponsored by
   HRDF Human Resources Development Fund
-arabic_description: خدماتنا المبتكرة تطور المشاريع، تدعم رواد الأعمال، تسهل الوصول
-  للمستثمرين، تمهد لتوسعك التجاري. نتبع صندوق تنمية الموارد البشرية.
+arabic_description: مبادرة وطنية تقدم حلول مبتكرة لدعم ريادة الأعمال والمنشآت الناشئة والراغبة في التوسع
 permalink: pretty
 markdown: kramdown
 exclude:
