--- a/_config.yml
+++ b/_config.yml
@@ -262,14 +262,17 @@ defaults:
   values:
     work_position: ''
     arabic_work_position: ''
-    location: ''
-    arabic_location: ''
+    location:
+      city: ''
+      arabic_city: ''
+      country: ''
+      arabic_country: ''
+      lat: ''
+      lng: ''
     20__work_offers_category: ''
     20__work_offers_type: ''
     information: 
     arabic_information: ''
-    button_url: ''
-    arabic_button_url: ''
 - scope:
     path: ''
     type: work-offers-section
