--- a/_config.yml
+++ b/_config.yml
@@ -319,6 +319,7 @@ zendesk_subdomain: 910ths
 hotjar_id: 511570
 hotjar_snippet_version: 5
 google_analytics_ua: 
+google_tag_manager_gtm: GTM-PGTQKW3
 google_maps_js_api: AIzaSyCy6hRFVqBgV_JH5DLWLVXqaj4hAdvjdIw
 imgix:
   source: 910.imgix.net
