--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-group-css-media-queries": "^1.2.0",
+    "gulp-minifier": "^0.2.2",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
