--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -115,3 +115,6 @@ work_offers:
     deadline: Deadline
     apply: Apply now
     back_button: Back to open positions
+
+newsleter:
+    subscribe: Subscribe
