Dockerize the project.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '2'
 
 services:
   jekyll:
-    image: jekyll/jekyll:latest
-    command: tail -f /dev/null #bash -c "npm install && node_modules/.bin/gulp watch
+    image: jekyll/jekyll:3.8
+    command: tail -f /dev/null
     ports:
       - 4000:4000
     volumes:
